# bfam

./: .clang-format  .travis.yml  CMakeLists.txt  INSTALL.md  ISSUES.md  Makefile  Makefile.am  README.md  TPL.md  configure.ac
autotools/: bfam_include.m4  bootstrap  sc_mpi.m4
cmake/: install_occa.sh  lua.cmake  luajit.cmake  occa2.cmake  p4est.cmake  runfailtest.cmake  zlib.cmake
examples/beard/: TPV14.lua  TPV14_base.lua  TPV205.lua  TPV205_base.lua  beard.c  beard_base.h  beard_dgx_rhs.c  beard_dgx_rhs.h  beard_dgx_rhs_2.h  beard_dgx_rhs_3.h  beard_example.lua  plane_wave.lua  plane_wave_2d.lua  plane_wave_3d.lua
examples/beard/SCEC/2d/: TPV205_base.lua
examples/beard/SCEC/3d/: TPV205_base.lua
examples/beard/SCEC/TPV101/3d/: TPV101.sh  TPV101_base.lua  TPV101_fault.m
examples/beard/SCEC/TPV14/2d/: TPV14_base.lua  TPV14_fault.m
examples/beard/SCEC/TPV14/3d/: TPV14.jou  TPV14_base_cubit.lua  TPV14_fault.m  geometry.jou
examples/beard/SCEC/TPV15/3d/: TPV15.inp  TPV15_base_cubit.lua  TPV15_fault.m
examples/beard/SCEC/TPV205/2d/: TPV205_base.lua  TPV205_rot.lua  fault_data.m
examples/beard/SCEC/TPV205/3d/: TPV205_base.lua
examples/beard/SCEC/TPV210/2d/: TPV210_base.lua
examples/beard/SCEC/TPV26/3d/: TPV26.sh  TPV26_base.lua  TPV26_fault.m
examples/beard/SCEC/TPV27/3d/: TPV27.sh  TPV27_base.lua  TPV27_body.m  TPV27_fault.m
examples/beard/SCEC/TPV28/3d/: TPV28_base.lua  TPV28_lowres.lua
examples/beard/SCEC/TPV29/3d/: TPV29.sh  TPV29_base.lua  TPV29_body.m  TPV29_fault.m
examples/beard/SCEC/TPV30/3d/: TPV30.sh  TPV30_base.lua  TPV30_body.m  TPV30_fault.m
examples/beard/SCEC/TPV31/3d/: TPV31.sh  TPV31_base.lua  TPV31_body.m  TPV31_fault.m
examples/beard/SCEC/TPV32/3d/: TPV32.sh  TPV32_base.lua  TPV32_body.m  TPV32_fault.m
examples/beard/SCEC/curve/: curve_test.lua
examples/beard/SCEC/matlab_tools/: process_body_station.m  process_fault_station.m  process_fault_station_2d.m  process_fault_station_old.m  write_scec_data.m
examples/beard/SCEC/upload_scripts/: scec_delete_data.pl  scec_download_images.pl  scec_upload_data.pl  scec_validate_login.pl
examples/beard/SurfaceWaves/: concave_cylinder.inp  concave_cylinder.lua  convergence.sh  convex_cylinder.inp  convex_cylinder.lua  convex_cylinder_bc.lua
examples/beard/convergence/: convergence.lua  convergence.sh  convergence_2d_plane.lua  convergence_2d_wave_guide.lua  convergence_3d_lamb.lua  convergence_3d_plane.lua  convergence_adams.sh  convergence_lsrk.sh  test_adams.lua  test_local.lua
examples/beard_2d/: TPV14_base.lua  TPV205_base.lua  beard.c  beard_dgx_rhs.c  beard_dgx_rhs.h  plane_wave.lua
examples/beard_2d/convergence/: convergence.sh
examples/blade/: blade.c  blade_dgx_rhs.c  blade_dgx_rhs_2.h  blade_dgx_rhs_3.h  periodic_box_2d.lua  periodic_box_3d.lua
examples/clock/: bfam_exam_clock.c
examples/elasticity_dgx_quad/: bfam_exam_elasticity_dgx_quad.c  bfam_exam_elasticity_dgx_quad_rhs.c  bfam_exam_elasticity_dgx_quad_rhs.h  plane.lua
examples/gopt/: bfam_gopt_usage.c
examples/logging/: bfam_exam_logging.c
examples/mesh/: bfam_exam_mesh_dgquad.c
examples/occa/: bfam_exam_occa.c
examples/p4est/: bfam_exam_p4est.c
examples/signal/: bfam_exam_signal.c
examples/vectorize/: bfam_exam_vectorize.c
examples/zpipe/: bfam_exam_zpipe.c
julia/: bfam-base.jl  bfam2d-test.jl  bfam2d.jl  bfam3d-test.jl  bfam3d.jl
lib/: .gitignore
misc/yosemite/: README.md  dispatch.patch
scripts/: Makefile  hamming_build.bash
scripts/git/hooks/: pre-commit
src/: Makefile.am  bfam.c  bfam.h  bfam.mk.in  bfam_base.c  bfam_base.h  bfam_clock.c  bfam_clock.h  bfam_communicator.c  bfam_communicator.h  bfam_config.h.in  bfam_critbit.c  bfam_critbit.h  bfam_dictionary.c  bfam_dictionary.h  bfam_domain.c  bfam_domain.h  bfam_domain_p4est.c  bfam_domain_p4est.h  bfam_domain_p4est_2d.c  bfam_domain_p4est_2d.h  bfam_domain_p8est.c  bfam_domain_p8est.h  bfam_domain_pxest.c  bfam_domain_pxest_2.h  bfam_domain_pxest_3.h  bfam_gopt.c  bfam_gopt.h  bfam_header_gen.c  bfam_jacobi.c  bfam_jacobi.h  bfam_kron.h  bfam_log.c  bfam_log.h  bfam_lua.c  bfam_lua.h  bfam_mpicomm.c  bfam_mpicomm.h  bfam_opencl.c  bfam_opencl.h  (+24 more)
tests/: bfam_test_aligned.c  bfam_test_communicator.c  bfam_test_critbit.c  bfam_test_dgx.c  bfam_test_dgx_metric.c  bfam_test_dictionary.c  bfam_test_domain.c  bfam_test_domain_fail_repeat.c  bfam_test_fail.c  bfam_test_interpolation.c  bfam_test_interpolation_1d.c  bfam_test_ispc.c  bfam_test_jacobi.c  bfam_test_kron.c  bfam_test_lua.c  bfam_test_lua_script.lua  bfam_test_malloc.c  bfam_test_mesh_dgquad.c  bfam_test_mesh_dgquad_geo.c  bfam_test_mesh_dgx.c  bfam_test_mesh_dgx_3.c  bfam_test_mesh_dgx_adapt_2.c  bfam_test_mesh_dgx_adapt_3.c  bfam_test_mesh_dgx_geo.c  bfam_test_mesh_dgx_glue_split_3.c  bfam_test_mpi.c  bfam_test_opencl.c  bfam_test_opencl_kernels.cl  bfam_test_sbp.c  bfam_test_timestep_lsrk.c  bfam_test_util.c  ctest2junix.xsl
